Ch7->44 SHIP + Ch6 web-verify sweep (Clean Code paraphrase + JLS/Sonar/formatter cited)
Ch7 (09): em-dash re-measured (running narration 0/1000; the 11.7 counted protected
captions/tables/bibliography) + a concrete inlined-constant before/after in the deep dive
-> CLARITY/DEPTH/READABILITY 8->9 -> 44/50 SHIP. Ch6 (07): cleared all 4 web-resolvable
residuals — Clean Code 'comment is an apology' -> attributed paraphrase; JLS SE21 §6.1 cited;
Sonar S101/S100/S116/S117/S115 regexes + Checkstyle LineLength=80 verified vs analyzer source;
g-j-f 1.35.0 / JDK-21 / --add-exports formatter matrix sourced; 0 inline @pin markers remain.
Re-score of Ch6 pending. drift clean.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Vn3iMLjGTQuUJJBaz5q8yp